fix: when one of preview arrows is hidden, add an empty transparent space to prevent problems with alignment

--- a/angular-modal-gallery/src/components/previews/previews.scss
+++ b/angular-modal-gallery/src/components/previews/previews.scss
@@ -284,3 +284,10 @@
   }
 }
 
+.empty-arrow-preview-image {
+  width: 15px;
+  height: 15px;
+  background-size: 15px;
+  background: #000;
+  opacity: 0;
+}
